--- a/11강_2_몇_초_걸렸는지_체크하기.html
+++ b/11강_2_몇_초_걸렸는지_체크하기.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <title>짝맞추기</title>
         <style>
-            .card { /* 카드 가로세로와 카드간의 간격 */
+            .card {
                 display: inline-block;
                 margin-right: 20px;
                 margin-bottom: 20px;
@@ -21,7 +21,7 @@
                 transform-style: preserve-3d;
             }
             .card.flipped .card-inner {
-                transform: rotateY(180deg); /* 회전 */
+                transform: rotateY(180deg);
             }
             .card-front {
                 background: navy;
@@ -43,31 +43,32 @@
         <script>
             const $wrapper = document.querySelector('#wrapper');
 
-            const total = 12;
-            const colors = ['red', 'orange', 'yellow', 'green', 'white', 'pink'];
-            let colorCopy = colors.concat(colors); // colors 2개를 합침 -> color 두 쌍이 하나로 합쳐짐
-            // concat : 원본을 수정하지 않고 새로운 배열을 만듦
+            const total = parseInt(prompt('카드 개수를 짝수로 입력하세요(최대 20).'));
+            const colors = ['red', 'orange', 'yellow', 'green', 'white', 'pink', 'cyan', 'violet', 'gray', 'black'];
+            let colorSlice = colors.slice(0, total / 2);
+            let colorCopy = colorSlice.concat(colorSlice);
             let shuffled = [];
             let clicked = [];
             let completed = [];
             let clickable = false;
+            let startTime;
 
-            function shuffle() { // 피셔-예이츠 셔플
+            function shuffle() {
                 for(let i = 0; colorCopy.length > 0; i+=1){
                     const randomIndex = Math.floor(Math.random() * colorCopy.length);
                     shuffled = shuffled.concat(colorCopy.splice(randomIndex, 1));
                 }
             }
 
-            function createCard(i) { // div.card > div.card-inner > (div.card-front + div.card-back)
+            function createCard(i) {
                 const card = document.createElement('div');
-                card.className = 'card'; // .card 태그 생성
+                card.className = 'card';
                 const cardInner = document.createElement('div');
-                cardInner.className = 'card-inner'; // .card-inner 태그 생성
+                cardInner.className = 'card-inner';
                 const cardFront = document.createElement('div');
-                cardFront.className = 'card-front'; // .card-front 태그 생성
+                cardFront.className = 'card-front';
                 const cardBack = document.createElement('div');
-                cardBack.className = 'card-back'; // .card-back 태그 생성
+                cardBack.className = 'card-back';
                 cardBack.style.backgroundColor = shuffled[i];
                 cardInner.appendChild(cardFront);
                 cardInner.appendChild(cardBack);
@@ -77,34 +78,31 @@
 
             function onClickCard() {
                 if(!clickable || completed.includes(this) || clicked[0] === this){
-                    // completed.includes(this) : 이미 짝이 맞춰진 카드 클릭 막기
-                    // clicked[0] === this : 방금 전에 클릭한 카드 클릭 막기
                     return;
                 }
-                // this는 클릭한 card를 가리킴
-                // 화살표 함수이면, this는 window
                 this.classList.toggle('flipped');
                 clicked.push(this);
                 if(clicked.length !== 2){
                     return;
                 }
-                clickable = false;
                 const firstBackColor = clicked[0].querySelector('.card-back').style.backgroundColor;
                 const secondBackColor = clicked[1].querySelector('.card-back').style.backgroundColor;
-                if(firstBackColor === secondBackColor) { // 두 카드가 같은 색이면
+                if(firstBackColor === secondBackColor) {
                     completed.push(clicked[0]);
                     completed.push(clicked[1]);
                     clicked = [];
                     if(completed.length !== total){
                         return;
                     }
+                    const endTime = new Date();
                     setTimeout(() => {
-                        alert(`축하합니다!`);
+                        alert(`축하합니다! ${(endTime - startTime) / 1000}초 걸렸습니다.`);
                         resetGame();
-                    });
+                    }, 500);
                     return;
                 }
-                setTimeout(() => { // 두 카드가 다른 색이면
+                clickable = false;
+                setTimeout(() => {
                     clicked[0].classList.remove('flipped');
                     clicked[1].classList.remove('flipped');
                     clicked = [];
@@ -114,28 +112,29 @@
 
             function startGame() {
                 clickable = false;
-                shuffle(); // 카드 섞음
+                shuffle();
                 for(let i = 0; i<total; i+=1){
-                    const card = createCard(i); // 섞인 카드를 만듦
+                    const card = createCard(i);
                     card.addEventListener('click', onClickCard);
                     $wrapper.appendChild(card);
                 }
 
-                document.querySelectorAll('.card').forEach((card, index) => { // 초반 카드 공개
+                document.querySelectorAll('.card').forEach((card, index) => {
                     setTimeout(() => {
                         card.classList.add('flipped');
-                    }, 1000 + 100 * index); // 1초부터 2.2초까지 카드가 뒤집힘
+                    }, 1000 + 100 * index);
                 });
-                setTimeout(() => { // 카드 감추기
+                setTimeout(() => {
                     document.querySelectorAll('.card').forEach((card) => {
                         card.classList.remove('flipped');
                     });
                     clickable = true;
-                }, 5000); // 5초 뒤에 카드를 감춤
+                    startTime = new Date();
+                }, 5000);
             }
 
             startGame();
-            function resetGame(){ // 게임 새로 시작하기
+            function resetGame(){
                 $wrapper.innerHTML = '';
                 colorCopy = colors.concat(colors);
                 shuffled = [];
