--- a/13강_1_2048.html
+++ b/13강_1_2048.html
@@ -67,7 +67,7 @@
                 data[randomCell[0]][randomCell[1]] = 2;
             }
 
-            function draw(){
+            function draw(){ 
                 data.forEach((rowData, i) => {
                     rowData.forEach((cellData, j) => {
                         const $target = $table.children[i].children[j];
@@ -83,6 +83,148 @@
             }
 
             startGame();
+
+            data = [ // 더미 데이터
+                [0, 2, 4, 2],
+                [0, 0, 8, 0],
+                [2, 2, 4, 8],
+                [0, 16, 0, 4],
+            ]
+            draw();
+            // 보통 window에 추가한다 -> 넓은 범위에 마우스나 키보드 이벤트를 추가
+            function moveCells(direction){
+                switch(direction){
+                    case 'left': { // 변수를 선언할 때는 중괄호 작성
+                        // 중괄호 작성하지 않으면 다른 case문에서도 const 변수가 겹쳐서 에러 발생
+                        // 중괄호를 작성하면 블록 스코프에 의해, 중괄호 바깥에서는 영향X
+                        const newData = [[], [], [], []];
+                        data.forEach((rowData, i) => {
+                            rowData.forEach((cellData, j) => {
+                                if(cellData) { // 빈칸 제외하고
+                                    const currentRow = newData[i]; // 지금 줄
+                                    const prevData = currentRow[currentRow.length - 1];
+                                    if(prevData === cellData){ // 이전 값이 지금 값과 같으면
+                                        currentRow[currentRow.length - 1] *= -2;
+                                    } else{
+                                        newData[i].push(cellData); // 왼쪽부터 넣어줌
+                                    }
+                                }
+                            });
+                        });
+                        console.log(newData);
+                        [1, 2, 3, 4].forEach((rowData, i) => {
+                            [1, 2, 3, 4].forEach((cellData, j) => {
+                                data[i][j] = Math.abs(newData[i][j]) || 0; // 원본데이터 수정
+                            });
+                        });
+                        break;
+                    }
+                    case 'right': {
+                        const newData = [[], [], [], []];
+                        data.forEach((rowData, i) => {
+                            rowData.forEach((cellData, j) => {
+                                if (rowData[3 - j]) {
+                                    const currentRow = newData[i];
+                                    const prevData = currentRow[currentRow.length - 1];
+                                    if(prevData === rowData[3 - j]) {
+                                        currentRow[currentRow.length - 1] *= -2;
+                                    } else {
+                                        newData[i].push(rowData[3 - j]);
+                                    }
+                                }
+                            });
+                        });
+                        console.log(newData);
+                        [1, 2, 3, 4].forEach((rowData, i) => {
+                            [1, 2, 3, 4].forEach((cellData, j) => {
+                                data[i][3 - j] = Math.abs(newData[i][j]) || 0;
+                            });
+                        });
+                        break;
+                    }
+                    case 'up': {
+                        const newData = [[], [], [], []];
+                        data.forEach((rowData, i) => {
+                            rowData.forEach((cellData, j) => {
+                                if(cellData){
+                                    const currentRow = newData[j];
+                                    const prevData = currentRow[currentRow.length - 1];
+                                    if(prevData === cellData) {
+                                        currentRow[currentRow.length - 1] *= -2;
+                                    } else {
+                                        newData[j].push(cellData);
+                                    }
+                                }
+                            });
+                        });
+                        console.log(newData);
+                        [1, 2, 3, 4].forEach((rowData, i) => {
+                            [1, 2, 3, 4].forEach((cellData, j) => {
+                                data[j][i] = Math.abs(newData[i][j]) || 0;
+                            });
+                        });
+                        break;
+                    }
+                    case 'down': {
+                        const newData = [[], [], [], []];
+                        data.forEach((rowData, i) => {
+                            rowData.forEach((cellData, j) => {
+                                if(data[3 - i][j]){
+                                    const currentRow = newData[j];
+                                    const prevData = currentRow[currentRow.length - 1];
+                                    if(prevData === data[3 - i][j]) {
+                                        currentRow[currentRow.length - 1] *= -2;
+                                    } else {
+                                        newData[j].push(data[3 - i][j]);
+                                    }
+                                }
+                            });
+                        });
+                        console.log(newData);
+                        [1, 2, 3, 4].forEach((rowData, i) => {
+                            [1, 2, 3, 4].forEach((cellData, j) => {
+                                data[3 - j][i] = Math.abs(newData[i][j]) || 0;
+                            });
+                        });
+                        break;
+                    }
+                }
+                put2ToRandomCell();
+                draw();
+            }
+            window.addEventListener('keyup', (event) => { // 키보드를 뗀 순간
+                if(event.key === 'ArrowUp'){
+                    moveCells('up');
+                } else if(event.key === 'ArrowDown'){
+                    moveCells('down');
+                } else if(event.key === 'ArrowLeft'){
+                    moveCells('left');
+                } else if(event.key === 'ArrowRight'){
+                    moveCells('right');
+                }
+            });
+
+            let startCoord;
+            window.addEventListener('mousedown', (event) => {
+                startCoord = [event.clientX, event.clientY]; // 마우스 처음 누른 좌표
+            });
+            window.addEventListener('mouseup', (event) => {
+                const endCoord = [event.clientX, event.clientY];
+                const diffX = endCoord[0] - startCoord[0];
+                const diffY = endCoord[1] - startCoord[1];
+                // Math.abs() : 절댓값
+                // Math.abs(diffX) > Math.abs(diffY) : 세로로 움직이는 것보다 가로로 움직이는 것이 커야함
+                if(diffX < 0 && Math.abs(diffX) > Math.abs(diffY)){
+                    moveCells('left');
+                } else if(diffX > 0 && Math.abs(diffX) > Math.abs(diffY)){
+                    moveCells('right');
+                } else if(diffY > 0 && Math.abs(diffX) <= Math.abs(diffY)){
+                    moveCells('down');
+                } else if(diffY < 0 && Math.abs(diffX) <= Math.abs(diffY)){
+                    moveCells('up');
+                }
+            });
+
         </script>
     </body>
 </html>
