--- a/14강/14강_2_목숨_구현하기.html
+++ b/14강/14강_2_목숨_구현하기.html
@@ -46,6 +46,7 @@
         <div>
             <span id="timer">0</span>초&nbsp;
             <span id="score">0</span>점&nbsp;
+            <span id="life">3</span>목숨
             <button id="start">시작</button>
         </div>
         <div>
@@ -115,6 +116,7 @@
         <script>
             const $timer = document.querySelector("#timer");
             const $score = document.querySelector("#score");
+            const $life = document.querySelector("#life");
             const $game = document.querySelector("#game");
             const $start = document.querySelector("#start");
             const $$cells = document.querySelectorAll(".cell");
@@ -123,15 +125,16 @@
             let started = false;
             let score = 0;
             let time = 60;
+            let life = 3; // 목숨
+            let timeId;
+            let tickId;
 
             $start.addEventListener('click', () => {
-                if(started) return; // 이미 시작했으면 무시
+                if(started) return;
                 started = true;
                 console.log("시작");
-                const timeId = setInterval(() => {
-                    time = (time * 10 - 1) / 10; // 0.1초마다 -0.1
-                    // time - 0.1 과 같이 계산하면 소숫점 계산에 문제를 가짐
-                    
+                timeId = setInterval(() => {
+                    time = (time * 10 - 1) / 10;
                     $timer.textContent = time;
                     if(time === 0) {
                         setTimeout(() => {
@@ -141,27 +144,24 @@
                         }, 50);
                     }
                 }, 100);
-                const tickId = setInterval(tick, 1000);
+                tickId = setInterval(tick, 1000);
                 tick();
             });
 
-            // 두더지 30% 폭탄 20% 빈칸 50%
             let gopherPercent = 0.3;
             let bombPercent = 0.5;
             function tick() {
                 holes.forEach((hole, index) => {
-                    if(hole) return; // 무언가 일어나고 있으면 return
+                    if(hole) return;
                     const randomValue = Math.random();
-                    if(randomValue < gopherPercent){ // 0.0, 0.1, 0.2
+                    if(randomValue < gopherPercent){
                         const $gopher = $$cells[index].querySelector('.gopher');
-                        holes[index] = setTimeout(() => { // 1초 뒤에 사라짐
-                            // setTimeout의 리턴값은 타이머 id
-                            // 타이머 id가 holes에 저장 (타이머 id는 양수)
+                        holes[index] = setTimeout(() => {
                             $gopher.classList.add('hidden');
                             holes[index] = 0;
                         }, 1000);
                         $gopher.classList.remove('hidden');
-                    } else if(randomValue < bombPercent){ // 0.3, 0.4
+                    } else if(randomValue < bombPercent){
                         const $bomb = $$cells[index].querySelector('.bomb');
                         holes[index] = setTimeout(() => {
                             $bomb.classList.add('hidden');
@@ -169,32 +169,38 @@
                         }, 1000);
                         $bomb.classList.remove('hidden');
                     }
-                    // 빈칸 : 0.5, 0.6, 0.7, 0.8, 0.9
                 });
             }
 
-            // $$cells : cell을 전부 선택한 것
             $$cells.forEach(($cell, index) => {
-                // 각각의 $cell에서 gopher를 찾아서 이벤트 추가
                 $cell.querySelector('.gopher').addEventListener('click', (event) => {
-                    // 두더지 하나를 여러번 클릭했을 때, 점수 증가되는 버그를 막음
                     if(!event.target.classList.contains('dead')){
                         score += 1;
                         $score.textContent = score;
                     }
-                    
                     event.target.classList.add('dead');
                     event.target.classList.add('hidden');
-                    clearTimeout(holes[index]); // 기존의 내려가는 타이머 제거
+                    clearTimeout(holes[index]);
                     setTimeout(() => {
                         holes[index] = 0;
                         event.target.classList.remove('dead');
                     }, 1000);
                 });
                 $cell.querySelector('.bomb').addEventListener('click', (event) => {
+                    if(!event.target.classList.contains('boom')){
+                        life--;
+                        $life.textContent = life;
+                        if(life === 0){
+                            setTimeout(() => {
+                                clearInterval(timeId);
+                                clearInterval(tickId);
+                                alert(`게임 오버! 점수는 ${score}점`);
+                            }, 50);
+                        }
+                    }
                     event.target.classList.add('boom');
                     event.target.classList.add('hidden');
-                    clearTimeout(holes[index]); // 기존의 내려가는 타이머 제거
+                    clearTimeout(holes[index]);
                     setTimeout(() => {
                         holes[index] = 0;
                         event.target.classList.remove('boom');
